[project]
name = "combined-services"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides tools for weather information and YouTube transcript extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.5.0",
    "youtube-transcript-api>=0.6.2",
]
